--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Etch a Sketch</h1>
+<div>
+    <label>
+        <input type="checkbox" class="checkbox">
+        Colors 
+    </label>
     <button class="buttonSq">squares per side</button>
+</div>
     <div class="container"></div>
     <div>
         <button class="buttonReload">reload</button>
